# arcade-games

./: CMakeLists.txt  README.md
arcade-games/: CMakeLists.txt  arcade-games.cpp
arcade-games-lib/: CMakeLists.txt
arcade-games-lib/include/: button.h  menu.h  random.h  sound.h
arcade-games-lib/src/: button.cpp  menu.cpp  random.cpp  sound.cpp
arcade-games/include/: main-menu.h  minesweeper-game-menu.h  snake-main-menu.h  tetris-game-menu.h
arcade-games/src/: main-menu.cpp  minesweeper-main-menu.cpp  snake-game-menu.cpp  tetris-game-menu.cpp
configs/: minesweeperConfig.json  snakeConfig.json
json/: json.hpp
minesweeper/: CMakeLists.txt  minesweeper.cpp
minesweeper/include/: cell.h  config.h  easy-level.h  game.h  hard-level.h  json_config.h  level-window.h  level.h  lucky-level.h  main-menu.h  normal-level.h  pro-level.h
minesweeper/src/: cell.cpp  json_config.cpp  level-window.cpp  level.cpp  main-menu.cpp
snake-game/: CMakeLists.txt  snake-game.cpp
snake-game/include/: config.h  direction.h  easy_level.h  field.h  food.h  hard_level.h  json_config.h  level-window.h  level.h  madness-level.h  main-menu.h  menu.h  normal_level.h  snake.h  witch_level.h
snake-game/src/: field.cpp  food.cpp  json_config.cpp  level-window.cpp  level.cpp  main-menu.cpp  menu.cpp  snake.cpp  witch_level.cpp
tetris/: CMakeLists.txt
tetris/include/: Figure.h
tetris/src/: Figure.cpp
